--- a/custom.css
+++ b/custom.css
@@ -146,7 +146,7 @@ a {
     font-family: 'Montserrat', sans-serif;
     border-collapse: collapse;
     width: 100%;
-    margin-top: 2px;
+    margin-top: 6px;
     border: none;
 }
 
@@ -173,6 +173,7 @@ a {
 .model-selection-table caption {
     caption-side: top;
     font-weight: bold;
+    font-size: 16;
     margin-bottom: 10px;
 }
 
